--- a/otakuva.html
+++ b/otakuva.html
@@ -5,15 +5,8 @@
    <body bgcolor=CCCCCC>
 		<h2>Ota kuva RaspiCamv2:lla</h2>
 		<h3> 
-			<button onclick="buttonClick()" type="button">OTA KUVA</button>    
+			<a href="/otakuva/" class="button">OTA KUVA</a>
 		</h3>
-			
-<script>
-function buttonClick() {
-	location.href='http://10.100.4.191:5000/otakuva/';
-	
-}
-</script>
 		
    </body>
 </html>
