--- a/index.html
+++ b/index.html
@@ -3,16 +3,8 @@
       <title>Ota kuva RaspiCamv2:lla</title>
    </head>
    <body bgcolor=CCCCCC>
-		<h2>Ota kuva RaspiCamv2:lla</h2>
-		<h3> 
-			<button onclick="buttonClick()" type="button">OTA KUVA</button>    
-		</h3>
-			
 <script>
-function buttonClick() {
-	location.href='http://10.100.4.191:5000/otakuva/';
-	
-}
+location.href='http://stulinux53.ipt.oamk.fi/codeigniter/otettuKuva.php/';
 </script>
 		
    </body>
